# routes/request_api.py
@@ -1,10 +1,20 @@
 """The Endpoints to manage the BOOK_REQUESTS"""
-import uuid
+
+import smtplib
+from email.mime.text import MIMEText
+from passlib.hash import sha256_crypt
 from datetime import datetime, timedelta
-from flask import jsonify, abort, request, Blueprint
+from bson.objectid import ObjectId
+from flask import jsonify, abort, request, Blueprint, url_for, render_template
 import pymongo
+
 from validate_email import validate_email
+from flask_mail import Mail, Message
+from itsdangerous import URLSafeTimedSerializer, SignatureExpired
+
 REQUEST_API = Blueprint('request_api', __name__)
+se = URLSafeTimedSerializer('Mybigsecretmaxefall!')
+mongo_client = "mongodb+srv://maxe:MAfall97@cluster0.q8jo5fg.mongodb.net/auth1"
 client = pymongo.MongoClient("mongodb://localhost:27017")
 db = client.auth1
 users = db.signUp1
@@ -67,18 +77,26 @@ def register_record():
 
     # new_uuid = str(uuid.uuid4())
     book_request = {
-        '_id': data['_id'],
-        'nom': data['nom'],
-        'prenom': data['prenom'],
-        'password': data['password'],
+
+
+        '_id': str(ObjectId()),
+        'lastname': data['lastname'],
+        'firstname': data['firstname'],
+        'password': sha256_crypt.encrypt(data[('password')]),
         'email': data['email'],
-        'timestamp': datetime.now().timestamp()
+        'pays':data['pays'],
+        'nationality':data['nationality'],
+        'identity':data['identity'],
+        'timestamp': datetime.now().timestamp(),
+
 
     }
     # BOOK_REQUESTS[new_uuid] = book_request
     # HTTP 201 Created
     users.insert_one(book_request)
-    return jsonify(book_request), 201
+    if book_request is not None:
+        return jsonify({'message': 'registered successfully', "status": "success"}), 201
+    return jsonify({'message': 'something went wrong', "status": "failed"}), 400
 
 
 @REQUEST_API.route('/request', methods=['POST'])
@@ -93,7 +111,8 @@ def create_record():
     if not request.get_json():
         abort(400)
     data = request.get_json(force=True)
-
+    email = data['email']
+    token = se.dumps(email, salt="confirm-email")
     if not data.get('email'):
         abort(400)
     if not validate_email(data['email']):
@@ -105,7 +124,9 @@ def create_record():
     book_request = {
         'password': data['password'],
         'email': data['email'],
-        'timestamp': datetime.now().timestamp()
+        'timestamp': datetime.now().timestamp(),
+        'token': '{}'.format(token)
+
     }
     # BOOK_REQUESTS[new_uuid] = book_request
     # HTTP 201 Created
@@ -124,8 +145,8 @@ def edit_record(_id):
     # if _id not in BOOK_REQUESTS:
     #     abort(404)
 
-    # if not request.get_json():
-    #     abort(400)
+    if not request.get_json():
+        abort(400)
     data = request.get_json(force=True)
 
     # if not data.get('email'):
@@ -134,19 +155,153 @@ def edit_record(_id):
     #     abort(400)
     # if not data.get('password'):
     #     abort(400)
+    lastname= data['lastname'],
+    firstname= data['firstname'],
+    password= data['password'],
+    email=data['email'],
 
-    book_request = {
-        'nom': data['nom'],
-        'prenom': data['prenom'],
-        'password': data['password'],
-        'email': data['email'],
-        'timestamp': datetime.now().timestamp()
-    }
+   
 
     # BOOK_REQUESTS[_id] = book_request
     updatUsers = users.find_one_and_update(
-        {"_id": _id}, {"$set": book_request})
-    return jsonify(updatUsers), 200
+        {"_id": _id}, {"$set": data},upsert=True)
+    return jsonify(  {
+                "status" : "success",
+                "message" : "Register update successfully",
+                "data" : data
+            }), 200
+
+
+@REQUEST_API.route('/change/password', methods=['POST'])
+def change_record():
+    """Edit a book request record
+    @param email: post : the requesters email address
+    @param title: post : the title of the book requested
+    @return: 200: a booke_request as a flask/response object \
+    with application/json mimetype.
+    @raise 400: misunderstood request
+    """
+    # if _id not in BOOK_REQUESTS:
+    #     abort(404)
+
+    # if not request.get_json():
+    #     abort(400)
+    data = request.get_json(force=True)
+
+    if not data.get('email'):
+        abort(400)
+    if not validate_email(data['email']):
+        abort(400)
+    if not data.get('password'):
+        abort(400)
+
+    email = data['email']
+    passwords = data['password']
+
+    # BOOK_REQUESTS[_id] = book_request
+    updaPass = users.find_one_and_update(
+        {"email": email}, {"$set":data})
+    if updaPass is not None:
+        return jsonify(f'Your password {passwords} has been updated! You are now able to log in.', 'success'), 200
+    return jsonify("something went wrong")
+
+
+@REQUEST_API.route('/Forgotpassword', methods=['POST'])
+def forgot_record():
+   
+    # if _id not in BOOK_REQUESTS:
+    #     abort(404)
+
+    if not request.get_json():
+        abort(400)
+
+    data = request.get_json(force=True)
+
+    if not data.get('email'):
+        abort(400)
+    if not validate_email(data['email']):
+
+        abort(400)
+    # if not data.get('password'):
+    #     abort(400)
+    email = data['email']
+    token = se.dumps(email)
+    # password = data['password']
+
+    # book_request = {
+    #     'email': data['email'],
+    #     # 'password':  data['password'],
+    #     'timestamp': datetime.now().timestamp(),
+    #     'token': token
+
+
+    # }
+    # link = url_for('confirm_email', token=token, _external=True)
+    user_exist = users.find_one({'email': email})
+    # msg.body = 'Your link is {}'.format(link)
+    if user_exist:
+        s = smtplib.SMTP('smtp.gmail.com', 587)
+        s.starttls()
+        s.login("maguettefseye@gmail.com", "qklhksqmkoxmurra")
+        data = request.get_json(force=True)
+        email = data['email']
+        # password = data['password']
+        book_request = {
+            # 'password': data['password'],
+            'email': data['email'],
+            'timestamp': datetime.now().timestamp(),
+            'token': '{}'.format(token)
+
+        }
+        # email = s.loads(token, salt='reset-password-salt', max_age=3600)
+
+        password = 'bghgvfdrehjkkkuui'
+
+        msg = MIMEText(f"Voici votre mot de passe : {password} ,\n voici votre identifiant : {email}")
+        msg['Subject'] = 'Reset password'
+        msg['From'] = 'maguettefseye@gmail.com'
+        msg['To'] = email
+   
+
+        s.sendmail("maguettefseye@gmail.com", email, msg.as_string())
+
+        s.quit()
+        result = jsonify(data)
+    else:
+        result = jsonify(
+            {'message': 'this {} does not exist'.format(email)}), 400
+    return result
+    # passwords=data['password']
+
+    # BOOK_REQUESTS[_id] = book_request
+    # updaPass = users.find_one_and_update(
+    #     {"email": email}, {"$set": {"password":passwords}})
+    # if updaPass is not None:
+    #     return jsonify(updaPass), 200
+    # return jsonify("something went wrong")
+
+
+@REQUEST_API.route('/confirm_email/<token>')
+def confirm_email(token):
+    try:
+
+        email = se.loads(token, salt='confirm_email', max_age=60)
+
+        if not request.get_json():
+            abort(400)
+        data = request.get_json(force=True)
+
+        book_request = {
+            # 'password': data['password'],
+            'email': data['email'],
+            'timestamp': datetime.now().timestamp(),
+            'token': '{}'.format(token)
+
+        }
+
+    except SignatureExpired:
+        return 'The token is expired'
+    return jsonify(book_request)
 
 
 @REQUEST_API.route('/request/<string:_id>', methods=['DELETE'])
@@ -162,6 +317,9 @@ def delete_record(_id):
     # del BOOK_REQUESTS[_id]
     deletUsers = users.find_one_and_delete({"_id": _id})
     if deletUsers is not None:
-        return jsonify(deletUsers), 204
+        return jsonify({"status":"success", "message":"Register successfully deleted"}),200
 
-    return "id does not exist"
+    return jsonify({"status":"failed", "message":"Something went wrong"}),400
+
+
+
