# static/swagger.json
@@ -4,6 +4,7 @@
     "description": "sean",
     "version": "1.0.0",
     "title": "Seans-Python3-Flask-Rest-Boilerplate",
+    "Bearer": { "type": "apiKey", "in": "header", "name": "Authorization" },
     "license": {
       "name": "MIT",
       "url": "https://opensource.org/licenses/MIT"
@@ -14,15 +15,21 @@
       "url": "/"
     }
   ],
+
   "tags": [
     {
-      "name": "Register Request",
+      "name": "CRUD Request",
       "description": "API for requesting and return register requests"
     }
   ],
   "paths": {
     "/request": {
       "get": {
+        "security": [
+          {
+            "unauthenticated": []
+          }
+        ],
         "tags": ["register Request"],
         "summary": "Returns registerRequests",
         "responses": {
@@ -35,6 +42,11 @@
         }
       },
       "post": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "tags": ["register Request"],
         "summary": "Create a new register request system",
         "requestBody": {
@@ -73,6 +85,64 @@
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/registersRequestPostBody"
+              }
+            }
+          }
+        },
+        "produces": ["application/json"],
+        "responses": {
+          "201": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/components/schemas/_id"
+            }
+          },
+          "400": {
+            "description": "Failed. Bad post data."
+          }
+        }
+      }
+    },
+    "/change/password": {
+      "post": {
+        "tags": ["password Request"],
+        "summary": "change password register request system",
+        "requestBody": {
+          "description": "password Request Post Object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/passwordRequestPostBody"
+              }
+            }
+          }
+        },
+        "produces": ["application/json"],
+        "responses": {
+          "201": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/components/schemas/_id"
+            }
+          },
+          "400": {
+            "description": "Failed. Bad post data."
+          }
+        }
+      }
+    },
+    "/Forgotpassword": {
+      "post": {
+        "tags": ["password Request"],
+        "summary": "change password register request system",
+        "requestBody": {
+          "description": "password Request Post Object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ForgotRequestPostBody"
               }
             }
           }
@@ -200,6 +270,12 @@
     }
   },
   "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer"
+      }
+    },
     "schemas": {
       "_id": {
         "properties": {
@@ -228,11 +304,11 @@
             "type": "string",
             "format": "string"
           },
-          "nom": {
+          "lastname": {
             "type": "string",
             "format": "string"
           },
-          "prenom": {
+          "firstname": {
             "type": "string",
             "format": "string"
           },
@@ -243,17 +319,52 @@
           "email": {
             "type": "string",
             "format": "email"
+          },
+          "pays": {
+            "type": "string",
+            "format": "string"
+          },
+          "nationality": {
+            "type": "string",
+            "format": "string"
+          },
+          "identity": {
+            "type": "string",
+            "format": "string"
+          }
+        }
+      },
+      "passwordRequestPostBody": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "format": "email"
+          },
+
+          "password": {
+            "type": "string",
+            "format": "string"
+          }
+        }
+      },
+      "ForgotRequestPostBody": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "format": "email"
           }
         }
       },
       "registerRequest": {
         "type": "object",
         "properties": {
-          "nom": {
+          "lastname": {
             "type": "string",
             "format": "string"
           },
-          "prenom": {
+          "firstname": {
             "type": "string",
             "format": "string"
           },
